# clock-libraries

./: CMakeLists.txt  ClockCommonLibrariesConfig.cmake.in  build.sh  run-tests.sh
communication/: CMakeLists.txt  README.md
communication/src/configuration/: DeviceConfiguration.cpp  DeviceConfiguration.h
communication/src/protocol/: MethodCatalog.cpp  MethodCatalog.h
communication/src/rest/client/: Service.cpp  Service.h
communication/src/rest/server/: Service.cpp  Service.h
communication/src/services/configuration/: DeviceConfiguration.cpp  DeviceConfiguration.h
communication/src/services/protocol/: MethodCatalog.cpp  MethodCatalog.h
communication/src/services/websocket/: Frame.cpp  Frame.h  Service.cpp  Service.h  SubscriptionHelper.cpp  SubscriptionHelper.h  Types.h
communication/src/websocket/: Frame.cpp  Frame.h  SubscriptionHelper.cpp  SubscriptionHelper.h  Types.h
communication/src/websocket/client/: Service.cpp  Service.h
communication/src/websocket/server/: Service.cpp  Service.h
communication/tests/: CommunicationUnitTests.cpp  DeviceConfigurationUnitTests.cpp
configuration/: CMakeLists.txt
utilities/: CMakeLists.txt
